exports[`<NavItem /> renders correctly with default options 1`] = `
<li
  className="sc-ifAKCX bUZdtg" />
`;

exports[`<NavItem /> renders correctly with icon class 1`] = `
<li
  className="sc-ifAKCX bUZdtg">
  <a
    className="sc-bxivhb epGGeB"
    href="/a/link">
    <i
      className="fa fa-github sc-bwzfXH kOHVOf" />
    <span
      className="sc-bdVaJa gDQLbe" />
  </a>
</li>
`;

exports[`<NavItem /> renders correctly with image 1`] = `
<li
  className="sc-ifAKCX bUZdtg">
  <a
    className="sc-bxivhb epGGeB"
    href="/a/link">
    <img
      className="sc-htpNat igasHz"
      src="/some/path" />
    <span
      className="sc-bdVaJa gDQLbe" />
  </a>
</li>
`;

exports[`<NavItem /> renders correctly with theme 1`] = `
<li
  className="sc-ifAKCX cpkTHT" />
`;

exports[`<NavItem /> renders link correctly 1`] = `
<li
  className="sc-ifAKCX bUZdtg">
  <a
    className="sc-bxivhb epGGeB"
    href="/a/link">
    <span
      className="sc-bdVaJa gDQLbe" />
  </a>
</li>
`;
